# eros-ros

./: README.md
bag/: sintetis1_pose_gen_vs_cmp_control.bag  sintetis1_pose_gen_vs_no_control.bag  sintetis1_pose_gen_vs_zmp_cmp_control.bag  sintetis1_pose_gen_vs_zmp_control.bag
src/firmware/: CMakeLists.txt  package.xml
src/firmware/src/: ll_gy521.cpp
src/motion/: CMakeLists.txt  package.xml
src/motion/config/: action_list.er2c  action_list.eros  default_list.eros  motion_list.er2c  motion_list.er2c.autosave  motion_list.eros
src/motion/include/motion/: definition.h  dynamixel.h  dynamixel_controller.h  globalvars.h  kinematics.h  loadparameter.h  motion4step.h  motion_control.h  motion_dummy.h
src/motion/launch/: dynamixel_controller.launch  motion_controller.launch  single_manager.launch  start_motion.launch
src/motion/src/: dynamixel.cpp  dynamixel_controller.cpp  motion_control.cpp  motion_dummy.cpp
src/robotcontrol/: CMakeLists.txt  package.xml
src/robotcontrol/include/razor_stream/: graph.h
src/robotcontrol/msg/: LowLevel.msg  Motion.msg  Razor.msg  Trajectory.msg
src/robotcontrol/src/: razor_stream.cpp  robotcontrol.cpp  serial_stream.cpp
src/robotmodel/: CMakeLists.txt  package.xml  urdf.rviz
src/robotmodel/launch/: eros_state_visualization.launch  eros_visualization.launch  mobile_state_launch.launch  read_tflow.launch  view_eros.launch~  view_mobile_robot.launch  view_mobile_robot.launch~  view_tflow.launch
src/robotmodel/rviz/: urdf_odom.rviz
src/robotmodel/src/: dynamixel.h  imu.h  model_publisher.cpp  state_publisher.cpp  state_publisher_tutorial.cpp
src/robotmodel/urdf/: EROS.gv  eros (bckup).urdf  eros.urdf  eros_old.urdf  lengan_kanan.urdf  tflow.gv  tflow.urdf  tflow.xacro  tflow_badan.xacro
src/servocontroller/: CMakeLists.txt  trajectory_client.py
src/servocontroller/config/: eros_kaki.yaml  eros_kepala.yaml  eros_tangan.yaml  test_servo.yaml
src/servocontroller/config/Backup/: eros_kaki.yaml  eros_kepala.yaml  eros_tangan.yaml
src/servocontroller/config/TFLOW/: backup  tflow_badan.yaml  tflow_kepala.yaml  tflow_tangan_kanan.yaml  tflow_tangan_kanan_lurus.yaml  tflow_tangan_kiri.yaml  tflow_tangan_kiri_lurus.yaml
src/servocontroller/launch/: eros_controller_manager.launch  start_eros_controller.launch
src/servocontroller/src/: lengank_listener.cpp  lengank_publisher.cpp  lengankanan.cpp  lengankanan_trajectory.cpp  servo_publisher.cpp
